@@ -12,6 +12,8 @@ public:
 private:
 	void SendMeter(const unsigned char ID1,const unsigned char ID2, const double musage, const double mtotal, const std::string &defaultname);
 	bool GetMeter(const unsigned char ID1,const unsigned char ID2, double &musage, double &mtotal);
+	void SendVoltage(const unsigned long Idx, const float Volt, const std::string &defaultname);
+	void SendPercentage(const unsigned long Idx, const float Percentage, const std::string &defaultname);
 
 	std::string m_SMAConfigFile;
 	std::string m_SMADataPath;
@@ -21,7 +23,6 @@ private:
 
 	std::string m_LastDateTime;
 	volatile bool m_stoprequested;
-	unsigned char m_LastMinute;
 	boost::shared_ptr<boost::thread> m_thread;
 
 	void Init();
