@@ -55,6 +55,8 @@ Version 1.0.xxxx (February xxth 2014)
 - Implemented: New General Voltage devices with 3 decimals
 - Implemented: Script parameters for Light On/Off actions
 - Implemented: openzwave Voltage/Ampere
+- Implemented: SMASpot, voltages, efficiency, Hz and Bluetooth signal strength
+- Implemented: SMASpot, accepting windows edited configuration lines!?!!...
 
 Version 1.0.1396 (January 18th 2014)
 - Implemented: new commandline option to specify www root folder (-wwwroot)
